--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "syzx9801@163.com",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^8.5.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.3",
