--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,10 @@
     ["env", {
       "modules": false
     }],
-    "stage-2"
+    "stage-2",
+    "react"
   ],
-  "plugins": ["transform-runtime"]
+  "plugins": ["transform-runtime",
+    ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }]
+  ]
 }
