--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "author": "syzx9801@163.com",
   "license": "ISC",
   "devDependencies": {
+    "antd": "^3.5.3",
     "autoprefixer": "^8.5.0",
+    "awesome-typescript-loader": "^5.0.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.3",
     "babel-loader": "^7.1.2",
+    "babel-plugin-import": "^1.7.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
     "ejs": "^2.5.7",
@@ -29,6 +33,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
@@ -42,10 +47,13 @@
     "node-notifier": "^5.1.2",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.9",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "stylelint": "^8.4.0",
     "stylelint-webpack-plugin": "^0.9.0",
+    "typescript": "^2.8.3",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
