--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postcss-loader": "^2.0.9",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-router": "^4.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "stylelint": "^8.4.0",
